# ScanITD

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  ScanITD.py  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: release.yml
Preprocessing/: QC.sh  README.md
Simulation/: README.md  bam_generator.py  create_indel_genome.py  create_rearranged_genome.sh  fastq_vaf10.sh  fastq_vaf20.sh  fastq_vaf50.sh  prepare_svsim.py  sim.R  variation.py
Test/: README.md  test.bai  test.bam  test.itd.vcf
conda/: meta.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: changelog.md  conf.py  contributing.md  index.rst
docs/source/api/: base.rst  cli.rst  inference.rst  writer.rst
docs/source/guide/: installation.md  output.md  quickstart.md  usage.md
src/scanitd/: __init__.py  mtype.py
src/scanitd/base/: __init__.py  basic.py  basic_read.py  cigar.py
src/scanitd/cli/: __init__.py  cli.py
src/scanitd/inference/: __init__.py  helper.py  main.py  sr_resuer.py
src/scanitd/writer/: __init__.py  vcf_writer.py  writer.py
tests/: __init__.py  conftest.py  test_basic.py  test_basic_read.py  test_cigar.py  test_helper.py  test_scanitd.py  test_vcf_writer.py
