[project]
name = "scanitd"
version = "0.9.2"
description = "ScanITD"
authors = [
    { name = "Ting-You Wang", email = "tywang@northwestern.edu" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=2.0.0",
    "pysam>=0.22.0",
    "pyfaidx>=0.7.2",
    "psutil>=5.9.5",
    "ssw-py>=1.0.1",
    "loguru>=0.7.0",
    "typer>=0.12.5",
    "rich>=13.7.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.2.6",
    "myst-parser==3.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-click>=6.0.0",
    "sphinx-autobuild>=2021.3.14",
]

[project.urls]
Homepage = "https://github.com/ylab-hi/ScanITD"
Repository = "https://github.com/ylab-hi/ScanITD"
Documentation = "https://scanitd.readthedocs.io"
Changelog = "https://github.com/ylab-hi/ScanITD/releases"

[project.scripts]
scanitd = "scanitd.cli.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.1.6",
    "codespell>=2.2.2",
    "ipdb>=0.13.11",
    "pytest>=7.4.3",
    "coverage[toml]>=7.3",
    "mypy>=1.7",
    "typeguard>=4.1.5",
    "sphinx>=7.2.6",
    "myst-parser==3.0.0",
    "sphinx-autobuild>=2021.3.14",
    "pre-commit>=3.3.3",
    "bandit>=1.7.3",
    "pep8-naming>=0.13.2",
    "pre-commit-hooks>=4.3.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-click>=6.0.0",
    "Pygments>=2.17.1",
    "pytest-mock>=3.11.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scanitd"]

[tool.uv]
package = true

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
allow_untyped_calls = true
ignore_missing_imports = true


[tool.bandit]
exclude_dirs = ['tests']
skips = ["B602", "B404", "B603"]


[tool.ruff]
lint.select = [
    # "ANN",
    # "D",
    "A",
    "F",
    "E",
    "W",
    "C90",
    "I",
    "UP",
    "N",
    "YTT",
    "TID",
    "S",
    "BLE",
    "FBT",
    "PLR",
    "B",
    "B9",
    "A",
    "C4",
    "T10",
    "EM",
    "ICN",
    "T20",
    "Q",
    "RET",
    "SIM",
    "ARG",
    "DTZ",
    "ERA",
    "PD",
    "PGH",
    "PLC",
    "PLE",
    "PLW",
    "RUF",
    "PL",
    "TD",
    "FIX",
    "PTH",
    "TCH",
    "SLOT",
    "PT",
    "PYI",
    "PIE",
    "ISC",
    "FA",
    "EXE",
    # "CPY",
    "COM",
]
line-length = 200
exclude = ["tests"]
lint.ignore = [
    "ANN001",
    "D203",
    "D213",
    "PGH003",
    "PLR0911", # Too many return statements
    "PLR0913", # Too many arguments to function call
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "DTZ005",  # Without `tz` argument
    "C901",    # Too complex
    'PLC0415',
    'PLR1702',
    'PLR0917',
    # formater conflict
    'COM812',
    'COM819',
    'D206',
    'ISC001',
    'Q000',
    'Q001',
    'Q002',
    'Q003',
    'W191',
    "PLR0904",
]
target-version = "py310"


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.ruff.lint.per-file-ignores]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
major_version_zero = true
